hard-gists/f435aa0ccd498b0840d2407d599bf31d/run.log
=== Docker Run Log for f435aa0ccd498b0840d2407d599bf31d ===
Started at: Mi 29. Okt 21:26:10 CET 2025

[2025-10-29 21:26:11] START: Running container for f435aa0ccd498b0840d2407d599bf31d
[2025-10-29 21:26:11] SUCCESS: Container 37b144b066aadcc543464667e7ba0bd2a3b51ca6160df66d7eb30b4c3073cb3f started for f435aa0ccd498b0840d2407d599bf31d
=== Container logs for f435aa0ccd498b0840d2407d599bf31d ===
  File "/snippet.py", line 89
    print 'ERROR getting %s' % item.get('title')
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for f435aa0ccd498b0840d2407d599bf31d ===
[2025-10-29 21:26:13] INFO: Container 37b144b066aadcc543464667e7ba0bd2a3b51ca6160df66d7eb30b4c3073cb3f has stopped
